--- a/utils/build.xml
+++ b/utils/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.28 2002/12/20 20:15:51 thendrix Exp $ -->
+<!-- $Id: build.xml,v 1.29 2002/12/24 15:28:18 robbod Exp $ -->
 
 <!-- ================================================= -->
 <!-- build.xml for the STEP modules repository         -->
@@ -313,12 +313,28 @@ tar.gz format)
       <targetfileset dir="." includes="${MODULES}/*.htm*"/>
     </dependset>
 
+    <!--
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${MODNAV}/mapping_view.xml"/>
+    <style includes="${MODNAV}/mapping_view.xml" destdir="."
+	   extension=".htm"
+	   style="${NAVXSL}/mapping_view.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
+    -->
+
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${MODNAV}/mapping_view_with_test.xml"/>
     <style includes="${MODNAV}/mapping_view_with_test.xml" destdir="."
 	   extension=".htm"
 	   style="${NAVXSL}/mapping_view_with_test.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
+
   </target>
 
 
@@ -347,7 +363,10 @@ tar.gz format)
       <targetfileset dir="." includes="${MODULES}/*.htm*"/>
     </dependset>
 
-
+    <echo
+ message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${MODNAV}/arm_descriptions.xml"/>
     <style includes="${MODNAV}/arm_descriptions.xml" destdir="."
 	   extension=".htm"
 	   style="${NAVXSL}/arm_descriptions.xsl">
@@ -355,6 +374,9 @@ tar.gz format)
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${MODNAV}/arm_long_form.xml"/>
     <style includes="${MODNAV}/arm_long_form.xml" destdir="."
 	   extension=".htm"
 	   style="${NAVXSL}/arm_long_form.xsl">
@@ -362,6 +384,9 @@ tar.gz format)
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
     
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${MODNAV}/ddeveloper.xml"/>
     <style includes="${MODNAV}/developer.xml" destdir="."
 	   extension=".htm"
 	   style="${NAVXSL}/developer.xsl">
@@ -369,6 +394,9 @@ tar.gz format)
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${MODNAV}/issues_dvlp.xml"/>
     <style includes="${MODNAV}/issues_dvlp.xml" destdir="."
 	   extension=".htm"
 	   style="${NAVXSL}/issues_dvlp.xsl">
@@ -376,6 +404,9 @@ tar.gz format)
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${MODNAV}/mapping_view.xml"/>
     <style includes="${MODNAV}/mapping_view.xml" destdir="."
 	   extension=".htm"
 	   style="${NAVXSL}/mapping_view.xsl">
@@ -383,6 +414,9 @@ tar.gz format)
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${MODNAV}/mim_descriptions.xml"/>
     <style includes="${MODNAV}/mim_descriptions.xml" destdir="."
 	   extension=".htm"
 	   style="${NAVXSL}/mim_descriptions.xsl">
@@ -390,6 +424,9 @@ tar.gz format)
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${MODNAV}/select_view.xml"/>
     <style includes="${MODNAV}/select_view.xml" destdir="."
 	   extension=".htm"
 	   style="${NAVXSL}/select_view.xsl">
@@ -397,6 +434,9 @@ tar.gz format)
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${MODNAV}/summary.xml"/>
     <style includes="${MODNAV}/summary.xml" destdir="."
 	   extension=".htm"
 	   style="${NAVXSL}/summary.xsl">
@@ -404,6 +444,9 @@ tar.gz format)
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${MODNAV}/issues.xml"/>
     <style includes="${MODDVLP}/issues.xml" destdir="."
 	   extension=".htm"
 	   style="${DVLPXSL}/issues_file.xsl">
@@ -411,6 +454,9 @@ tar.gz format)
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${MODNAV}/projmg.xml"/>
     <style includes="${MODDVLP}/projmg.xml" destdir="."
 	   extension=".htm"
 	   style="${DVLPXSL}/projmg.xsl">
@@ -418,12 +464,20 @@ tar.gz format)
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${MODULES}/arm.xml, mim.xml"/>
     <style includes="${MODULES}/arm.xml, ${MODULES}/mim.xml" 
       destdir="." extension=".htm"
       style="${STYLES}/express.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
+
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${MODULES}/arm_descriptions.xml,"/>
+    <echo message="            ${MODULES}/mim_descriptions.xml"/>
     <style includes="${MODULES}/arm_descriptions.xml,
 	   ${MODULES}/mim_descriptions.xml" destdir="."
 	   extension=".htm"
@@ -431,139 +485,226 @@ tar.gz format)
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
+
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${MODULES}/armexpg*.xml,"/>
+    <echo message="            ${MODULES}/mimexpg*.xml"/>
     <style includes="${MODULES}/armexpg*.xml,
 	   ${MODULES}/mimexpg*.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/imgfile.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
-    </style>
+    </style>    
+
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${SYS}/contents.xml"/>
     <style includes="${SYS}/contents.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_contents.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
+
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${SYS}/1_scope.xml"/>
     <style includes="${SYS}/1_scope.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_1_scope.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
+
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${SYS}/2_refs.xml"/>
     <style includes="${SYS}/2_refs.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_2_refs.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${SYS}/3_defs.xml"/>
     <style includes="${SYS}/3_defs.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_3_defs.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
+
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${SYS}/4_info_reqs.xml"/>
     <style includes="${SYS}/4_info_reqs.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_4_info_reqs.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
+
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${SYS}/5_main.xml"/>
     <style includes="${SYS}/5_main.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_5_main.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
+
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${SYS}/5_mapping.xml"/>
     <style includes="${SYS}/5_mapping.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_5_mapping.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
+
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${SYS}/5_mim.xml"/>
     <style includes="${SYS}/5_mim.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_5_mim.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
+
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${SYS}/a_short_names.xml"/>
     <style includes="${SYS}/a_short_names.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_a_short_names.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
+
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${SYS}/b_obj_reg.xml"/>
     <style includes="${SYS}/b_obj_reg.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_b_obj_reg.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
+
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${SYS}/biblio.xml"/>
     <style includes="${SYS}/biblio.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_biblio.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
+
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${SYS}/c_arm_expg.xml"/>
     <style includes="${SYS}/c_arm_expg.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_c_arm_expg.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${SYS}/cover.xml"/>
     <style includes="${SYS}/cover.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_cover.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
+
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${SYS}/d_mim_expg.xml"/>
     <style includes="${SYS}/d_mim_expg.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_d_mim_expg.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
+
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${SYS}/e_exp.xml"/>
     <style includes="${SYS}/e_exp.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_e_exp.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
+
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${SYS}/e_exp_arm.xml"/>
     <style includes="${SYS}/e_exp_arm.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_e_exp_arm.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
+
 <!--    <style includes="${SYS}/e_exp_arm_lf.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_e_exp_arm_lf.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>-->
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${SYS}/e_exp_mim.xml"/>
     <style includes="${SYS}/e_exp_mim.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_e_exp_mim.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
+
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${SYS}/e_exp_mim_lf.xml"/>
     <style includes="${SYS}/e_exp_mim_lf.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_e_exp_mim_lf.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
+
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${SYS}/f_guide.xml"/>
     <style includes="${SYS}/f_guide.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_f_guide.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
+
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${SYS}/foreword.xml"/>
     <style includes="${SYS}/foreword.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_foreword.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
+
+    <echo message=""/>
+    <echo message="____________________________________________________________"/>
+    <echo message="Processing: ${SYS}/introduction.xml"/>
     <style includes="${SYS}/introduction.xml" destdir="."
 	   extension=".htm"
 	   style="${STYLES}/sect_introduction.xsl">
@@ -696,6 +837,13 @@ tar.gz format)
     <style includes="${NAV}/modules_project.xml" destdir="."
       extension=".htm"
       style="${NAVXSL}/modules_project.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
+
+    <style includes="${NAV}/modules_status.xml" destdir="."
+      extension=".htm"
+      style="${NAVXSL}/modules_status.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
@@ -1166,7 +1314,7 @@ tar.gz format)
   </target>
 
 
-  <target name="all" depends="index, resources, modules, aps"
+  <target name="all" depends="index, resources, modules, aps, resdocs"
 	  description="create HTML for everything"/>
 
   <target name="tgz" depends="all" 
