--- a/utils/build.xml
+++ b/utils/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.30 2003/01/14 12:30:32 robbod Exp $ -->
+<!-- $Id: build.xml,v 1.31 2003/01/14 13:47:04 robbod Exp $ -->
 
 <!-- ================================================= -->
 <!-- build.xml for the STEP modules repository         -->
@@ -313,7 +313,7 @@ tar.gz format)
       <targetfileset dir="." includes="${MODULES}/*.htm*"/>
     </dependset>
 
-    
+    <!--    
     <echo message=""/>
     <echo message="____________________________________________________________"/>
     <echo message="Processing: ${MODNAV}/mapping_view.xml"/>
@@ -323,8 +323,8 @@ tar.gz format)
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
-    
-    <!--
+    -->
+
     <echo message=""/>
     <echo message="____________________________________________________________"/>
     <echo message="Processing: ${MODNAV}/mapping_view_with_test.xml"/>
@@ -334,7 +334,7 @@ tar.gz format)
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
-    -->
+    
   </target>
 
 
@@ -386,7 +386,7 @@ tar.gz format)
     
     <echo message=""/>
     <echo message="____________________________________________________________"/>
-    <echo message="Processing: ${MODNAV}/ddeveloper.xml"/>
+    <echo message="Processing: ${MODNAV}/developer.xml"/>
     <style includes="${MODNAV}/developer.xml" destdir="."
 	   extension=".htm"
 	   style="${NAVXSL}/developer.xsl">
