--- a/utils/build.xml
+++ b/utils/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.31 2003/01/14 13:47:04 robbod Exp $ -->
+!-- $Id: build.xml,v 1.32 2003/01/14 14:54:05 robbod Exp $ -->
 
 <!-- ================================================= -->
 <!-- build.xml for the STEP modules repository         -->
@@ -98,9 +98,9 @@ deletes all HTML generated for a single application protocol
 generate resource documents
 
 "ant -DRESDOCS=data/resource_docs/[resdoc-name] resdocs" 
-deletes all HTML generated for a single resource documents
+generates all HTML  for a single resource documents
 
-"ant -DRESDOCS=data/resource_docs/[resdoc-name] clean_resdoc" 
+"ant -DRESDOCS=data/resource_docs/[resdoc-name] clean_resdocs" 
 deletes all HTML generated for a single resource documents
 
 
@@ -1291,26 +1291,27 @@ tar.gz format)
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
-<!-- not sure if this is needed
-    <style includes="${RESDOCS}/sys/e_guide.xml" destdir="."
+
+    <style includes="${RESDOCS}/sys/tech_discuss.xml" destdir="."
 	   extension=".htm"
-	   style="${RESXSL}/sect_e_guide.xsl">
-      <param name="output_type" expression="HTM"/>
-      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
-    </style>
--->
-    <style includes="${RESDOCS}/sys/tech_discussion.xml" destdir="."
-	   extension=".htm"
-	   style="${RESXSL}/sect_tech_discussion.xsl">
+	   style="${RESXSL}/sect_tech_discuss.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
 
+    <style includes="${RESDOCS}/sys/examples.xml" destdir="."
+	   extension=".htm"
+	   style="${RESXSL}/sect_examples.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
 
-
-
-
-
+    <style includes="${RESDOCS}/sys/add_scope.xml" destdir="."
+	   extension=".htm"
+	   style="${RESXSL}/sect_add_scope.xsl">
+      <param name="output_type" expression="HTM"/>
+      <param name="output_rcs" expression="${OUTPUT_RCS}"/>
+    </style>
   </target>
 
 
