Renamed xsl files for annexes e,f,g  to agree with tags

--- a/utils/build.xml
+++ b/utils/build.xml
@@ -1,4 +1,4 @@
-!-- $Id: build.xml,v 1.32 2003/01/14 14:54:05 robbod Exp $ -->
+!-- $Id: build.xml,v 1.33 2003/01/16 00:59:25 thendrix Exp $ -->
 
 <!-- ================================================= -->
 <!-- build.xml for the STEP modules repository         -->
@@ -1292,9 +1292,9 @@ tar.gz format)
     </style>
 
 
-    <style includes="${RESDOCS}/sys/tech_discuss.xml" destdir="."
+    <style includes="${RESDOCS}/sys/tech_discussion.xml" destdir="."
 	   extension=".htm"
-	   style="${RESXSL}/sect_tech_discuss.xsl">
+	   style="${RESXSL}/sect_tech_discussion.xsl">
       <param name="output_type" expression="HTM"/>
       <param name="output_rcs" expression="${OUTPUT_RCS}"/>
     </style>
