--- a/utils/build.xml
+++ b/utils/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.34 2003/01/16 01:14:24 thendrix Exp $ -->
+<!-- $Id: build.xml,v 1.35 2003/01/20 07:59:51 robbod Exp $ -->
 
 <!-- ================================================= -->
 <!-- build.xml for the STEP modules repository         -->
@@ -62,6 +62,12 @@ checks AP XML files for well-formedness
 
 "ant wf_nav"
 checks navigation XML and XSL files for well-formedness
+
+"ant valid_modules"
+checks module XML for well-formedness and conformance to DTD
+
+"ant -DMODULESDIR=data/modules/[module-name] valid_modules"
+check a single module XML for well-formedness and conformance to DTD
 
 "ant index" 
 generates HTML for repository_index.xml
@@ -265,6 +271,22 @@ tar.gz format)
       <fileset dir="${NAVDIR}" includes="**/*.xml, **/*.xsl"/>
     </xmlvalidate>
   </target>
+
+
+
+  <target name="valid_modules" depends="init" 
+	  description="check modules for well-formedness">
+    <echo message="____________________________________________________________"/>
+    <echo message="Checking files in ${MODULESDIR} for well-formedness and conformance to DTD"/>
+    <xmlvalidate lenient="no" warn="no" failonerror="no">
+      <fileset dir="${MODULESDIR}">
+        <include name="**/*.xml"/>
+        <exclude name="**/nav/*.xml"/>
+      </fileset>
+    </xmlvalidate>
+  </target>
+
+
 
   <target name="index" depends="init, ballots, nav" 
           description="generate repository index">
