Should be about right.

--- a/ballots/ballots/part_56/build.xml
+++ b/ballots/ballots/part_56/build.xml
@@ -74,10 +74,11 @@
       <property name="MIMEXPGXML" value=""/>
       <property name="ARMEXPXML" value=""/>
       <property name="MIMEXPXML" value=""/>
-      <property name="RESOURCESXML" value="data/resources/state_type_schema/state_type_schema.xml,data/resources/state_observed_schema/state_observed_schema.xml"/>
-      <property name="RESOURCESEXP" value="data/resources/state_type_schema/state_type_schema.exp,data/resources/state_observed_schema/state_observed_schema.exp"/>
-      <property name="RESOURCESSCHEMAEXPGGIFS" value="data/resources/state_type_schema/state_type_schemaexpg*.gif,data/resources/state_observed_schema/state_observed_schemaexpg*.gif"/>
-      <property name="RESOURCESSCHEMAEXPGXMLS" value="data/resources/state_type_schema/state_type_schemaexpg*.xml,data/resources/state_observed_schema/state_observed_schemaexpg*.xml"/>
+      <property name="RESOURCESXML" value="data/resources/state_observed_schema/state_observed_schema.xml,data/resources/state_type_schema/state_type_schema.xml"/>
+      <property name="RESOURCESEXP" value="data/resources/state_observed_schema/state_observed_schema.exp,data/resources/state_type_schema/state_type_schema.exp"/>
+      <property name="RESDOCRESOURCESEXP" value="data/resources/state_type_schema/state_type_schema.exp,data/resources/state_observed_schema/state_observed_schema.exp"/>
+      <property name="RESOURCESSCHEMAEXPGGIFS" value="data/resources/state_observed_schema/state_observed_schemaexpg*.gif,data/resources/state_type_schema/state_type_schemaexpg*.gif"/>
+      <property name="RESOURCESSCHEMAEXPGXMLS" value="data/resources/state_observed_schema/state_observed_schemaexpg*.xml,data/resources/state_type_schema/state_type_schemaexpg*.xml"/>
    </target>
     
    <target name="init" depends="variables">
@@ -425,5 +426,8 @@
       <copy todir="${ISODIR}">
          <fileset dir="." includes="${RESOURCESSCHEMAEXPGGIFS}"/>
       </copy>
+      <concat destfile="${ISODIR}/wg12n1821.exp">
+         <fileset dir="." includes="${RESDOCRESOURCESEXP}"/>
+      </concat>
    </target>
 </project>
