--- a/utils/build.xml
+++ b/utils/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.37 2003/02/05 20:09:40 thendrix Exp $ -->
+<!-- $Id: build.xml,v 1.38 2003/02/09 20:58:49 thendrix Exp $ -->
 
 <!-- ================================================= -->
 <!-- build.xml for the STEP modules repository         -->
@@ -71,11 +71,18 @@ checks module XML for well-formedness and conformance to DTD
 "ant valid_resdocs"
 checks all resource part  XML for well-formedness and conformance to DTD
 
+"ant valid_resources"
+checks all resource  XML for well-formedness and conformance to DTD
+
 "ant -DMODULESDIR=data/modules/[module-name] valid_modules"
 check a single module XML for well-formedness and conformance to DTD
 
 "ant -DRESDIR=data/resource_docs/[resdoc-name] valid_resdocs"
 check a single resource part XML for well-formedness and conformance to DTD
+
+"ant -DRESOURCESDIR=data/resources/[resource-name] valid_resources"
+check a single resource part XML for well-formedness and conformance to DTD
+
 
 "ant index" 
 generates HTML for repository_index.xml
@@ -309,6 +316,19 @@ tar.gz format)
       <fileset dir="${RESDIR}">
         <include name="**/*.xml"/>
         <exclude name="**/nav/*.xml"/>
+      </fileset>
+    </xmlvalidate>
+  </target>
+
+  <target name="valid_resources" depends="init" 
+	  description="check modules for well-formedness">
+    <echo message="____________________________________________________________"/>
+    <echo message="Checking files in ${RESOURCESDIR} for well-formedness and conformance to DTD"/>
+    <xmlvalidate lenient="no" warn="no" failonerror="no">
+      <fileset dir="${RESOURCESDIR}">
+        <include name="**/*.xml"/>
+        <exclude name="**/resource_map.xml" />
+        <exclude name="**/developer.xml" />
       </fileset>
     </xmlvalidate>
   </target>
